--- a/files.html
+++ b/files.html
@@ -167,7 +167,7 @@
               <img class="mt-15 mb-15" src="imgs/psd.svg" alt="" />
             </div>
             <div class="txt-c mb-10 fs-14">my-file.psd</div>
-            <p class="c-grey fs-13">Osama</p>
+            <p class="c-grey fs-13">Ahmed</p>
             <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
               <span>16/5/2021</span>
               <span>15.1MB</span>
@@ -227,7 +227,7 @@
               <img class="mt-15 mb-15" src="imgs/psd.svg" alt="" />
             </div>
             <div class="txt-c mb-10 fs-14">my-file.psd</div>
-            <p class="c-grey fs-13">Osama</p>
+            <p class="c-grey fs-13">Ahmed</p>
             <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
               <span>16/5/2021</span>
               <span>15.1MB</span>
@@ -311,7 +311,7 @@
               <img class="mt-15 mb-15" src="imgs/psd.svg" alt="" />
             </div>
             <div class="txt-c mb-10 fs-14">my-file.psd</div>
-            <p class="c-grey fs-13">Osama</p>
+            <p class="c-grey fs-13">Ahmed</p>
             <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
               <span>16/5/2021</span>
               <span>15.1MB</span>
@@ -371,7 +371,7 @@
               <img class="mt-15 mb-15" src="imgs/psd.svg" alt="" />
             </div>
             <div class="txt-c mb-10 fs-14">my-file.psd</div>
-            <p class="c-grey fs-13">Osama</p>
+            <p class="c-grey fs-13">Ahmed</p>
             <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
               <span>16/5/2021</span>
               <span>15.1MB</span>
