--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </div>
           <img src="imgs/avatar.png" alt="" class="avatar" />
           <div class="body txt-c d-flex p-20 mt-20 mb-20 block-mobile">
-            <div>Osama Elbahgy <span class="d-block c-grey fs-14 mt-10">Developer</span></div>
+            <div>Ahmed Elbahgy <span class="d-block c-grey fs-14 mt-10">Developer</span></div>
             <div>80 <span class="d-block c-grey fs-14 mt-10">Projects</span></div>
             <div>$8500 <span class="d-block c-grey fs-14 mt-10">Earned</span></div>
           </div>
@@ -329,7 +329,7 @@
                 <img class="mr-10" src="imgs/psd.svg" alt="" />
                 <div>
                   <span class="d-block">My-Psd-File.pdf</span>
-                  <span class="fs-15 c-grey">Osama</span>
+                  <span class="fs-15 c-grey">Ahmed</span>
                 </div>
               </div>
               <div class="bg-eee btn-shape fs-13">4.5mb</div>
@@ -421,7 +421,7 @@
           <div class="top d-flex align-center">
             <img class="avatar mr-15" src="imgs/avatar.png" alt="" />
             <div class="info">
-              <span class="d-block mb-5 fw-bold">Osama Elbahgy</span>
+              <span class="d-block mb-5 fw-bold">Ahmed Elbahgy</span>
               <span class="c-grey">About 3 Hours Ago</span>
             </div>
           </div>
